# CppLinq

./: .gitignore  .gitmodules  CMakeLists.txt
Tests/: AggregateTests.cpp  AllTests.cpp  AnyTests.cpp  AppendTests.cpp  Assertions.hpp  AverageTests.cpp  CMakeLists.txt  ChunkTests.cpp  ConcatenationTests.cpp  ContainsTests.cpp  CountTests.cpp  DefaultIfEmptyTests.cpp  DistinctByTests.cpp  DistinctTests.cpp  ElementAtOptionalTests.cpp  ElementAtOrDefaultTests.cpp  ElementAtTests.cpp  ExceptByTests.cpp  ExceptTests.cpp  FirstOptionalTests.cpp  FirstOrDefaultTests.cpp  FirstTests.cpp  ForEachTests.cpp  InnerJoinTests.cpp  IntersectByTests.cpp  IntersectTests.cpp  LastOptionalTests.cpp  LastOrDefaultTests.cpp  LastTests.cpp  Main.cpp  MaximumByTests.cpp  MaximumTests.cpp  MinimumByTests.cpp  MinimumTests.cpp  OrderByTests.cpp  PrependTests.cpp  ReverseTests.cpp  SelectManyTests.cpp  SelectTests.cpp  SequenceEqualTests.cpp  (+18 more)
Tests/Aggregate/: AggregateTests.cpp  Aggregate_elements.cpp  Aggregate_elements_using_result_selector.cpp  Aggregate_elements_using_seed.cpp  Aggregate_with_result_selector.cpp  Aggregate_with_seed.cpp  Aggregate_without_seed.cpp  CMakeLists.txt
Tests/All/: All.cpp  CMakeLists.txt  Determine_whether_all_elements_satisfy_a_condition.cpp  Tests.cpp
Tests/Any/: Any.cpp  AnyTests.cpp  CMakeLists.txt  Determine_whether_any_element_satisfies_a_condition.cpp
Tests/Append/: Append.cpp  AppendTests.cpp  Append_element.cpp  Append_enumerator.cpp  CMakeLists.txt  Enumerator_is_inaccessible_after_it_is_finished.cpp
Tests/Average/: Average.cpp  CMakeLists.txt  Compute_the_average.cpp  Tests.cpp
Tests/Chunk/: CMakeLists.txt  ChunkTests.cpp  Chunk_enumerator.cpp  Chunk_size_is_equal.cpp  Chunk_size_is_greater.cpp  Chunk_size_is_less.cpp  Chunk_size_is_zero.cpp  Enumerator_is_inaccessible_after_it_is_finished.cpp  Split_elements_into_chunks_of_size_equal_to_sequence.cpp  Split_elements_into_chunks_of_size_greater_than_sequence.cpp  Split_elements_into_chunks_of_size_less_than_sequence.cpp  Split_elements_into_chunks_of_size_zero.cpp
Tests/Common/: Assertions.hpp
Tests/Concatenate/: CMakeLists.txt  Concatenate.cpp  ConcatenateTests.cpp  Concatenate_enumerator.cpp  Concatenate_two_sequences.cpp  Enumerator_is_inaccessible_after_it_is_finished.cpp
Tests/Contains/: CMakeLists.txt  ContainsTests.cpp  Contains_with_comparer.cpp  Contains_without_comparer.cpp  Determine_whether_sequence_contains_element.cpp  Determine_whether_sequence_contains_element_using_comparer.cpp
Tests/Count/: CMakeLists.txt  CountTests.cpp  Count_elements.cpp  Count_elements_that_satisfy_a_condition.cpp  Count_elements_using_predicate.cpp  Count_with_predicate.cpp  Count_without_predicate.cpp
Tests/DefaultIfEmpty/: CMakeLists.txt  DefaultIfEmpty.cpp  DefaultIfEmpty_enumerator.cpp  Enumerator_is_inaccessible_after_it_is_finished.cpp  Return_default_if_sequence_is_empty.cpp  Tests.cpp
Tests/Distinct/: CMakeLists.txt  DistinctTests.cpp  Distinct_deferred_execution_with_comparer.cpp  Distinct_deferred_execution_without_comparer.cpp  Distinct_enumerator_with_comparer.cpp  Distinct_enumerator_without_comparer.cpp  Distinct_with_comparer.cpp  Distinct_without_comparer.cpp  Enumerator_is_inaccessible_after_it_is_finished.cpp  Enumerator_is_inaccessible_after_it_is_finished_using_comparer.cpp  Enumerator_is_not_accessed.cpp  Enumerator_is_not_accessed_using_comparer.cpp  Equatable.cpp  Equatable.hpp  Return_distinct_elements.cpp  Return_distinct_elements_using_comparer.cpp
Tests/DistinctBy/: CMakeLists.txt  Customer.cpp  Customer.hpp  DistinctByTests.cpp  Enumerator_is_inaccessible_after_it_is_finished.cpp  Enumerator_is_inaccessible_after_it_is_finished_using_comparer.cpp  Equatable.cpp  Equatable.hpp  Return_distinct_elements_by_key.cpp  Return_distinct_elements_by_key_using_comparer.cpp  Tests.cpp
Tests/ElementAt/: CMakeLists.txt  ElementAtTests.cpp  Return_element_at_index.cpp
Tests/ElementAtOptional/: CMakeLists.txt  Return_element_at_index_or_uninitialized.cpp  Tests.cpp
Tests/ElementAtOrDefault/: CMakeLists.txt  ElementAtOrDefaultTests.cpp  Return_element_at_index_or_default.cpp
Tests/Except/: CMakeLists.txt  Customer.cpp  Customer.hpp  Enumerator_is_inaccessible_after_it_is_finished.cpp  Enumerator_is_inaccessible_after_it_is_finished_using_comparer.cpp  Equatable.cpp  Equatable.hpp  Produce_set_difference_of_two_sequences.cpp  Produce_set_difference_of_two_sequences_using_comparer.cpp  Tests.cpp
Tests/ExceptBy/: CMakeLists.txt  Customer.cpp  Customer.hpp  Enumerator_is_inaccessible_after_it_is_finished.cpp  Enumerator_is_inaccessible_after_it_is_finished_using_comparer.cpp  Equatable.cpp  Equatable.hpp  Produce_set_difference_of_two_sequences_by_key.cpp  Produce_set_difference_of_two_sequences_by_key_using_comparer.cpp  Tests.cpp
Tests/First/: CMakeLists.txt  FirstTests.cpp  Return_first_element.cpp  Return_first_element_that_satisfies_a_condition.cpp
Tests/FirstOptional/: CMakeLists.txt  FirstOptionalTests.cpp  Return_first_element_or_uninitialized.cpp  Return_first_element_that_satisfies_a_condition_or_uninitialized.cpp
Tests/FirstOrDefault/: CMakeLists.txt  Return_first_element_or_default.cpp  Return_first_element_that_satisfies_a_condition_or_default.cpp  Tests.cpp
Tests/ForEach/: CMakeLists.txt  Enumerator_is_inaccessible_after_it_is_finished.cpp  Execute_function_for_each_element.cpp  ForEachTests.cpp  Tests.cpp
Tests/GroupBy/: CMakeLists.txt  Enumerator_is_inaccessible_after_it_is_finished.cpp  Enumerator_is_inaccessible_after_it_is_finished_using_comparer.cpp  Group_elements.cpp  Group_elements_using_comparer.cpp  Human.cpp  Human.hpp  Tests.cpp
Tests/InnerJoin/: CMakeLists.txt  Enumerator_is_inaccessible_after_it_is_finished.cpp  Enumerator_is_inaccessible_after_it_is_finished_using_comparer.cpp  Inner_join_two_sequences.cpp  Inner_join_two_sequences_using_comparer.cpp  Person.cpp  Person.hpp  Pet.cpp  Pet.hpp  Tests.cpp
Tests/Intersect/: CMakeLists.txt  Customer.cpp  Customer.hpp  Enumerator_is_inaccessible_after_it_is_finished.cpp  Equatable.cpp  Tests.cpp  (+5 more)
(+500 files in other folders)
