cmake_minimum_required(VERSION 3.8)

set(PROJECT_NAME CppLinq)

project(${PROJECT_NAME} VERSION 0.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if (MSVC)
    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
endif()

add_library(${PROJECT_NAME} INTERFACE)

target_include_directories(
    ${PROJECT_NAME}
    INTERFACE 
        ${PROJECT_SOURCE_DIR}/Source
)

target_sources(
    ${PROJECT_NAME}
    PRIVATE
        ${PROJECT_SOURCE_DIR}/Source/CppLinq.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Comparers/DefaultEqualityComparer.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Comparers/DefaultEqualityComparer.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Comparers/DefaultEqualityComparer.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Containers/ConstIteratorProvider.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Containers/ConstIteratorProvider.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Containers/ConstReverseIteratorProvider.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Containers/ConstReverseIteratorProvider.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Containers/DoNothingContainerStrategy.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Containers/DoNothingContainerStrategy.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Containers/DoNothingHasher.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Containers/DoNothingHasher.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Containers/SortContainerStrategy.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Containers/SortContainerStrategy.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Containers/VectorContainerProvider.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Containers/VectorContainerProvider.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/AppendEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/AppendEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/AppendEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/ChunkEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/ChunkEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/ChunkEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/ConcatenationEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/ConcatenationEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/ConcatenationEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/DefaultIfEmptyEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/DefaultIfEmptyEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/DefaultIfEmptyEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/DistinctEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/DistinctEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/DistinctEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/EnumeratorWrapper.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/EnumeratorWrapper.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/ExceptEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/ExceptEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/ExceptEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/ForEachEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/ForEachEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/ForEachEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/IntersectEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/IntersectEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/IntersectEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/IteratorEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/IteratorEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/IteratorEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/OrderEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/OrderEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/OrderEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/PrependEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/PrependEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/PrependEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/QueryEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/QueryEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/ReverseEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/ReverseEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/ReverseEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/SelectEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/SelectEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/SelectEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/SkipEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/SkipEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/SkipEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/SkipWhileEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/SkipWhileEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/SkipWhileEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/StaticCastEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/StaticCastEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/StaticCastEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/TakeEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/TakeEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/TakeEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/TakeWhileEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/TakeWhileEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/TakeWhileEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/WhereEnumerator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/WhereEnumerator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Enumerators/WhereEnumerator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Loops/LoopIterator.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Loops/LoopIterator.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Loops/LoopIterator.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Loops/LoopIteratorSentinel.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Loops/LoopIteratorSentinel.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/AggregateMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/AggregateMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/AllMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/AllMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/AnyMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/AnyMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/AppendMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/AppendMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/AverageMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/AverageMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ChunkMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ChunkMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ConcatenateMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ConcatenateMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ContainsMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ContainsMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/CountMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/CountMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/DefaultIfEmptyMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/DefaultIfEmptyMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/DistinctByMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/DistinctByMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/DistinctMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/DistinctMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ElementAtMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ElementAtMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ElementAtOptionalMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ElementAtOptionalMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ElementAtOrDefaultMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ElementAtOrDefaultMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ExceptByMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ExceptByMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ExceptMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ExceptMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/FirstMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/FirstMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/FirstOptionalMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/FirstOptionalMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/FirstOrDefaultMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/FirstOrDefaultMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ForEachMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ForEachMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/IntersectByMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/IntersectByMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/LastMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/LastMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/LastOptionalMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/LastOptionalMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/LastOrDefaultMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/LastOrDefaultMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/MaximumMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/MaximumMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/MinimumMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/MinimumMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/MixinUtilities.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/MixinUtilities.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/OrderByMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/OrderByMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/PrependMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/PrependMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/QueryMixins.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ReverseMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ReverseMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/SelectMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/SelectMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/SingleMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/SingleMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/SingleOptionalMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/SingleOptionalMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/SingleOrDefaultMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/SingleOrDefaultMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/SkipMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/SkipMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/SkipWhileMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/SkipWhileMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/StaticCastMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/StaticCastMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/SumMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/SumMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/TakeMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/TakeMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/TakeWhileMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/TakeWhileMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ToVectorMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/ToVectorMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/WhereMixin.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Mixins/WhereMixin.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Predicates/TruePredicate.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Predicates/TruePredicate.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Query.Forward.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Query.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Query.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/Selectors/SelfSelector.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/Selectors/SelfSelector.inl
        ${PROJECT_SOURCE_DIR}/Source/Details/TypeTraits/EnumeratorTypeProvider.hpp
        ${PROJECT_SOURCE_DIR}/Source/Details/TypeTraits/ValueTypeProvider.hpp
        ${PROJECT_SOURCE_DIR}/Source/Exceptions/ArgumentOutOfRangeException.hpp
        ${PROJECT_SOURCE_DIR}/Source/Exceptions/EmptyContainerException.hpp
        ${PROJECT_SOURCE_DIR}/Source/Exceptions/FinishedEnumeratorException.hpp
        ${PROJECT_SOURCE_DIR}/Source/Exceptions/MoreThanOneElementException.hpp
)

enable_testing()

add_subdirectory(Modules/GoogleTest)
add_subdirectory(Tests)