include(${PROJECT_SOURCE_DIR}/CMake/add_unit_test.cmake)

add_subdirectory(Aggregate)
add_subdirectory(All)
add_subdirectory(Any)
add_subdirectory(Append)
add_subdirectory(Average)
add_subdirectory(Chunk)
add_subdirectory(Concatenate)
add_subdirectory(Contains)
add_subdirectory(Count)
add_subdirectory(DefaultIfEmpty)
add_subdirectory(Distinct)
add_subdirectory(DistinctBy)
add_subdirectory(ElementAt)
add_subdirectory(ElementAtOptional)
add_subdirectory(ElementAtOrDefault)
add_subdirectory(Except)
add_subdirectory(ExceptBy)
add_subdirectory(First)
add_subdirectory(FirstOptional)
add_subdirectory(FirstOrDefault)
add_subdirectory(ForEach)
add_subdirectory(InnerJoin)
add_subdirectory(Intersect)
add_subdirectory(IntersectBy)
add_subdirectory(Last)
add_subdirectory(LastOptional)
add_subdirectory(LastOrDefault)
add_subdirectory(LeftJoin)
add_subdirectory(Maximum)
add_subdirectory(MaximumBy)
add_subdirectory(Minimum)
add_subdirectory(MinimumBy)
add_subdirectory(OrderBy)
add_subdirectory(OuterJoin)
add_subdirectory(Prepend)
add_subdirectory(Reverse)
add_subdirectory(RightJoin)
add_subdirectory(Select)
add_subdirectory(SelectMany)
add_subdirectory(SequenceEqual)
add_subdirectory(Single)
add_subdirectory(SingleOptional)
add_subdirectory(SingleOrDefault)
add_subdirectory(Skip)
add_subdirectory(SkipLast)
add_subdirectory(SkipLastWhile)
add_subdirectory(SkipWhile)
add_subdirectory(StaticCast)
add_subdirectory(Sum)
add_subdirectory(Take)
add_subdirectory(TakeLast)
add_subdirectory(TakeLastWhile)
add_subdirectory(TakeWhile)
add_subdirectory(ToVector)
add_subdirectory(Union)
add_subdirectory(UnionBy)
add_subdirectory(Where)
add_subdirectory(Zip)